--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		  <img class="logo" src="images/logo.png">
         </div>
         <div class="one-half column logo2">
-          <img class="logo2" src="images/logo2.png">
+          <img class="logo2" src="images/logo2.jpg">
         </div>
       </div>
     </div>
@@ -54,16 +54,31 @@
     <div class="container">
       <div class="row">
         <div class="one-third column value">
-          <h5 class="value-heading">Классический</h5>
-          <p class="value-description">Излюбленная курортная процедура, которая в основном применяется при заболеваниях двигательного аппарата. Эта процедура всегда является удачным дополнением к основному курсу там, где нужно расслабить напряженные мышцы, провести лечение болезненных соединительных тканей или же подготовить пациента к лечебной физкультуре. Хотя массаж имеет и свои противопоказания, о которых нужно помнить. Противопоказания: послеоперационные осложнения в полости брюшины и грудины, варикоз нижних конечностей, осложнения кровообращения и кровотечения.</p>
+          <p class="value-description">
+		  Антицеллюлитный массаж                      <br>
+		  Гуа ша                                      <br>
+		  Массаж лица                                 <br>
+		  Лимфодренажный массаж                       <br>
+		  Тайский массаж                              <br>
+		  Тайский foot-массаж                         <br>
+		  Ток-сен                                     <br>
+		  Микс-массаж с приемами мануальной терапии <br>
+		  Классический массаж спины                   <br>
+		  Нейроседативный (релакс) массаж             
+		  </p>                                        
         </div>
         <div class="one-third column value">
-          <h5 class="value-heading">Точечный</h5>
-          <p class="value-description">При проведении точечного массажа выявляются биологически активные точки на теле. Надавливая на них, выделяются вещества эндоморфины, действие которых подобно действию гормонов. В зависимости от техники воздействия на локальную точку, массаж может быть возбуждающим или успокаивающим. Точечный массаж используется практически при всех нарушениях мышечного тонуса, также при болях мышечного, суставного характера, где необходимо достичь расслабления, релаксации, успокоения.</p>
+          <p class="value-description">Тайский массаж, или же «йога-массаж» – целостная система оздоровления, включающая целый ряд способов воздействия, таких как глубокие надавливания на мышечную ткань, пассивные упражнения, напоминающие позы йоги, рефлексологию, растяжение, раскрытие суставов, активизирование потока энергии в теле человека, акупрессуру.</p>
         </div>
         <div class="one-third column value">
-          <h5 class="value-heading">Массаж ног</h5>
-          <p class="value-description">Стимуляция акупрессурных точек на поверхности стопы. С помощью специальной массажной техники возможно положительное влияние на внутренние органы, установление вегетативного равновесия, ускорение заживления ран и уменьшение болей. Этот вид массажа рекомендуется при бессоннице, депрессиях, а также для общего улучшения состояния организма.</p>
+          <p class="value-description">
+		  Глубокая релаксация                      <br>
+		  Снятие стресса                           <br>
+		  Расслабленные мышцы                      <br>
+		  Увеличение гибкости и раскрытие суставов <br>
+		  Мягкая стимуляция всех систем организма  <br>
+		  Улучшение циркуляции                     <br>
+		  Уменьшение болей различной этиологии</p>
         </div>
       </div>
     </div>
@@ -73,7 +88,7 @@
     <div class="container">
       <h5 class="section-heading">Контакты</h5> <br>
 	  <h3 class="section-description"><a href="tel:+380635521220">063 552 12 20</a></h3><br>
-      <h4 class="section-description"><a href="mailto:ruslan@gmail.com?subject=Массаж" target="_blank"> ruslan@gmail.com</a></h4><br>
+      <h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
     </div>
   </div>
   
@@ -84,7 +99,10 @@
           <img class="u-max-full-width" src="images/1.jpg">
         </div>
         <div class="one-half column category">
-          <img class="u-max-full-width" src="images/2.jpg">
+          <img class="u-max-full-width" src="images/2.webp">
+        </div>
+		<div class="one-half column category">
+          <img class="u-max-full-width" src="images/3.webp">
         </div>
       </div>
     </div>
