--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="one-half column">
 		  <img class="logo" src="images/logo.png">
         </div>
-        <div class="one-half column logo2">
+        <div class="one-half column">
           <img class="logo2" src="images/logo2.jpg">
         </div>
       </div>
@@ -55,16 +55,20 @@
       <div class="row">
         <div class="one-third column value">
           <p class="value-description">
-		  Антицеллюлитный массаж                      <br>
+
 		  Гуа ша                                      <br>
 		  Массаж лица                                 <br>
 		  Лимфодренажный массаж                       <br>
-		  Тайский массаж                              <br>
+		  Классический массаж спины		  <br>		  
+		  Микс-массаж с приемами мануальной терапии <br>		  
+		  Нейроседативный (релакс) массаж		  <br>
+		  Антицеллюлитный массаж                      <br>		  
 		  Тайский foot-массаж                         <br>
-		  Ток-сен                                     <br>
-		  Микс-массаж с приемами мануальной терапии <br>
-		  Классический массаж спины                   <br>
-		  Нейроседативный (релакс) массаж             
+		  Тайский массаж                              <br>
+		  Ток-сен                                     
+
+                   
+             
 		  </p>                                        
         </div>
         <div class="one-third column value">
@@ -72,13 +76,15 @@
         </div>
         <div class="one-third column value">
           <p class="value-description">
-		  Глубокая релаксация                      <br>
+
 		  Снятие стресса                           <br>
 		  Расслабленные мышцы                      <br>
+		  Уменьшение болей различной этиологии   	<br>	  
 		  Увеличение гибкости и раскрытие суставов <br>
 		  Мягкая стимуляция всех систем организма  <br>
 		  Улучшение циркуляции                     <br>
-		  Уменьшение болей различной этиологии</p>
+		  Глубокая релаксация                      
+		  </p>
         </div>
       </div>
     </div>
