--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 
   <div class="section contacts">
     <div class="container">
-      <h5 class="section-heading">Контакты</h5> <br>
 	  <h3 class="section-description"><a href="tel:+380635521220">063 552 12 20</a></h3><br>
       <h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
     </div>
@@ -102,20 +101,23 @@
     <div class="container">
       <div class="row">
         <div class="one-half column category">
+		
+		<div class="gallery cf">
+		
           <img class="u-max-full-width" src="images/1.jpg">
+		  <img class="u-max-full-width" src="images/3.jpg">
+		  
+		   </div> 
+		  
         </div>
         <div class="one-half column category">
-          <img class="u-max-full-width" src="images/2.webp">
-        </div>
-		<div class="one-half column category">
-          <img class="u-max-full-width" src="images/3.webp">
-        </div>
+		  <img class="u-max-full-width" src="images/2.jpg">
+		  <img class="u-max-full-width" src="images/4.jpg">		  
+        </div>	
       </div>
     </div>
   </div>
-
-
-
+  
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
