--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div class="container">
 	  <h3 class="section-description"><a href="tel:+380635521220">063 552 12 20</a></h3><br>
       <h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
+	        <h5 class="section-description"><a href="contacts.vcf">Добавить в контакты (vCard)</a></h5><br>
     </div>
   </div>
   
