--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
     <div class="container">
 	  <h3 class="section-description"><a href="tel:+380635521220">063 552 12 20</a></h3><br>
       <h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
-	  <h5 class="section-description"><a href="contacts.vcf">Добавить в контакты (vCard)</a></h5><br>
-	  <br><br><br>
-	    
-  <!-- шаблон коментария
+	  <h5 class="section-description"><a href="contacts.vcf">Добавить в контакты (vCard)</a></h5>
+    </div>
+  </div>
+  
+  <div class="section-description">
+   <!-- шаблон коментария
 	<div class="row">
 	  <img class="one column u-pull-left" src="images/quote.png"><br>
 	  <h5 class="section-description u-pull-left">
@@ -105,7 +107,7 @@
 	  
 	  </p>
 	</div>
-  -->	  
+  --> 
 	<div class="row">
 	  <img class="one column u-pull-left" src="images/quote.png"><br>
 	  <h5 class="section-description u-pull-left">
@@ -133,9 +135,8 @@
 	</div>
 	<br><br><br>
 	<div class="row">
-	<h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Отзыв" target="_blank"> Отправить отзыв</a></h4>
+	<h4 class="section contacts"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Отзыв" target="_blank"> Отправить отзыв</a></h4>
 	</div>	
-	</div>
   </div>
   
   <div class="section categories">
