--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <div class="section-description">
    <!-- шаблон коментария
 	<div class="row">
-	  <img class="one column u-pull-left" src="images/quote.png"><br>
-	  <h5 class="section-description u-pull-left">
+	  <img class="one column u-pull-left quote" src="images/quote.png"><br>
+	  <h5 class="section-comments u-pull-left">
 	  
 	  </h5><p class="u-pull-right">
 	  
@@ -109,7 +109,7 @@
 	</div>
   --> 
 	<div class="row">
-	  <img class="one column u-pull-left" src="images/quote.png"><br>
+	  <img class="one column u-pull-left quote" src="images/quote.png"><br>
 	  <h5 class="section-description u-pull-left">
 	  Хороший массажист
 	  </h5><p class="u-pull-right">
@@ -118,7 +118,7 @@
 	</div>
 	
 	<div class="row">	  
-  	  <img class="one column u-pull-left" src="images/quote.png"><br>
+  	  <img class="one column u-pull-left quote" src="images/quote.png"><br>
 	  <h5 class="section-description u-pull-left">
 	  Понравился тайский массаж. Всем советую.
 	  </h5><p class="u-pull-right">
@@ -126,7 +126,7 @@
 	  </p>
 	  </div>	  
 	<div class="row">	  
-  	  <img class="one column u-pull-left" src="images/quote.png"><br>
+  	  <img class="one column u-pull-left quote" src="images/quote.png"><br>
 	  <h5 class="section-description u-pull-left">
 	  Прошла программу по коррекции фигуры. Чувствую себя классно и -5 кг))
 	  </h5><br><p class="u-pull-right">
