--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	</div>
 	<br><br><br>
 	<div class="row">
-	<h4 class="section contacts"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Отзыв" target="_blank"> Отправить отзыв</a></h4>
+	<h4 class="section contacts"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Отзыв" target="_blank"> Оставить отзыв</a></h4>
 	</div>	
   </div>
   
