--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
       <div class="row">
         <div class="one-half column category">
 		<div class="gallery cf">
-          <img class="u-max-full-width" src="images/1.jpg">
-		  <img class="u-max-full-width" src="images/3.jpg">
+          <a href="images/1.jpg"><img class="u-max-full-width" src="images/1.jpg"></a>
+		  <a href="images/2.jpg"><img class="u-max-full-width" src="images/3.jpg"></a>
 		   </div> 
         </div>
         <div class="one-half column category">
-		  <img class="u-max-full-width" src="images/2.jpg">
-		  <img class="u-max-full-width" src="images/4.jpg">		  
+		  <a href="images/3.jpg"><img class="u-max-full-width" src="images/2.jpg"></a>
+		  <a href="images/4.jpg"><img class="u-max-full-width" src="images/4.jpg"></a>		  
         </div>	
       </div>
     </div>
