--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
   <div class="section contacts">
     <div class="container">
 	  <h3 class="section-description"><a href="tel:+380635521220">063 552 12 20</a></h3><br>
-      <h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
+		  <h5 class="section-description"><a href="https://t.me/+380635521220">Telegram</a></h5><br>
+	<h4 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Массаж" target="_blank"> ruslan.zakariaev@gmail.com</a></h4><br>
 	  <h5 class="section-description"><a href="contacts.vcf">Добавить в контакты (vCard)</a></h5><br>
 	  <h5 class="section-description"><a href="mailto:ruslan.zakariaev@gmail.com?subject=Запись на сеанс" target="_blank">Записаться на сеанс</a></h5>
     </div>
